# cv-match

./: .env.example  .gitignore  .kilocodemodes  .pre-commit-config-simple.yaml  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  AuthSetup.md  CHANGELOG.md  CLAUDE.md  CRITICAL_SECURITY_FIXES_SUMMARY.md  FutureImprovements.md  MANUAL-VERIFICATION.md  Makefile  PHASE0_1_SECURITY_IMPLEMENTATION_SUMMARY.md  PRECOMMIT_COORDINATION_SUMMARY.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  TEST-WORKFLOW.md  TYPE_CHECKING_REPORT.md  commitlint.config.js  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  docker-optimization-verification-report.md  first-time.sh  fix_lint_errors.py  frontend-audit-a-plus-roadmap.md  frontend-audit-comparison-report.md  frontend-audit-report.md  frontend-fix-implementation-guide.md  package.json  performance_test.sh  security_demo.py  setup_test_users.sql  test-auth-flow.md  test_pricing_consistency.py  test_security_fixes.sql
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  FINAL_TYPE_CHECKING_REPORT.md  LLM_ENV_VARS.md  Makefile  P0_COMPLETION_SUMMARY.md  P0_MIGRATION_VERIFICATION_REPORT.md  P0_PII_INTEGRATION_COMPLETION_SUMMARY.md  PAYMENT_SECURITY_REQUIREMENTS.md  PAYMENT_TESTING_SUMMARY.md  PII_INTEGRATION_COMPLETION_REPORT.md  README.md  SECURITY_IMPLEMENTATION_COMPLETE.md  TYPE_CHECKING_REPORT.md  migration_analysis.md  mypy.ini  p0_pii_integration_verification.py  penetration_test.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-test.txt  requirements.txt  ruff-brazilian.toml  run_webhook_tests.py  test-simple-clean.py  test_authorization.py  test_bias_integration.py  test_coverage_report.py  test_e2e.py  test_llm_integration.py  test_p0_verification.py  test_pii_integration_manual.py  test_pii_standalone.py  test_ruff.py  test_stripe_setup.py  test_uv_environment.py  test_uv_imports.py  (+1 more)
backend/.next/: prerender-manifest.json  trace
backend/.next/cache/: .rscinfo
backend/.next/server/: server-reference-manifest.json  webpack-runtime.js
backend/.next/server/vendor-chunks/: @swc.js
backend/.next/static/chunks/: app-pages-internals.js  webpack.js
backend/app/: main.py
backend/app/agent/: __init__.py  manager.py
backend/app/api/: pricing.py  privacy.py  router.py  subscriptions.py
backend/app/config/: pricing.py
backend/app/core/: auth.py  auth_dependencies.py  config.py  database.py  exceptions.py  lgpd_config.py  sentry.py  sentry_brazil_context.py
backend/app/exceptions/: __init__.py  providers.py
backend/app/middleware/: __init__.py  credit_check.py  credit_middleware.py  credits.py  pii_middleware.py  security.py
backend/app/models/: api.py  auth.py  llm.py  llm_models.py  optimization.py  payment.py  resume.py  secure.py  subscription.py  usage.py  vectordb.py  vectordb_models.py
backend/app/services/: __init__.py  bias_detection_service.py  fairness_monitoring_service.py  job_service.py  paid_resume_improvement_service.py  payment_verification.py  resume_service.py  score_improvement_service.py  stripe_service.py  subscription_service.py  text_extraction.py  usage_limit_service.py  usage_tracking_service.py  webhook_service.py
backend/app/utils/: file_security.py  pii_masker.py  security_check.py  validation.py
backend/docs/: SECURITY_IMPLEMENTATION.md  resume-api-security.md
backend/docs/development/: bias-detection-fairness-documentation.md
backend/scripts/: setup_stripe_subscriptions.py
backend/security-backups/cv-match-20251013_145234/: Makefile  P0_COMPLETION_SUMMARY.md  PAYMENT_SECURITY_REQUIREMENTS.md  pyproject.toml  test_uv_environment.py  verify_services.py
backend/security-reports/: bandit-initial-scan.txt  flake8-initial-scan.txt
backend/supabase/migrations/: 20251013000000_create_lgpd_consent_system.sql  20251013000001_add_user_authorization_to_resumes.sql
backend/tests/: QUICK_START.md  README.md  conftest.py  test_lgpd_compliance.py  test_security.py
backend/tests/e2e/: test_payment_e2e.py
backend/tests/fixtures/: webhook_fixtures.py
backend/tests/integration/: test_payment_flow_integration.py  test_payment_webhooks.py  test_subscription_api.py  test_subscription_e2e.py
backend/tests/unit/: test_bias_detection_service.py  test_credit_atomicity.py  test_database_functions.py  test_fairness_monitoring_service.py  test_input_sanitizer.py  test_job_service.py  test_payment_endpoints.py  test_payment_error_handling.py  test_payment_verification_service.py  test_pii_integration.py  test_resume_authorization.py  test_resume_service.py  test_score_improvement_service.py  test_security_middleware.py  test_stripe_service.py  test_subscription_service.py  test_subscription_webhooks.py  test_usage_limit_service.py  test_webhook_endpoints.py  test_webhook_security.py  test_webhook_service.py  test_webhook_service_comprehensive.py
(+698 files in other folders)
