[project]
name = "cv-match-backend"
version = "0.1.0"
description = "CV-Match Backend API - AI-powered resume optimization for the Brazilian market"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Carlos", email = "carlos@cvmatch.com" }
]

dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "supabase==2.9.0",
    "openai==1.68.2",
    "anthropic>=0.18.0,<0.19",
    "pydantic>=2.6.0,<2.7",
    "pydantic-settings>=2.1.0,<2.2",
    "python-multipart==0.0.9",
    "numpy>=1.26.0,<1.27",
    "email-validator>=2.1.0,<2.2",
    "qdrant-client>=1.5.0,<1.6",
    "httpx>=0.26.0,<0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "supabase.*",
    "qdrant_client.*",
]
ignore_missing_imports = true
