[project]
name = "cv-match-backend"
version = "0.1.0"
description = "CV-Match Backend API - AI-powered resume optimization for the Brazilian market"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Carlos", email = "carlos@cvmatch.com" }
]

dependencies = [
    "fastapi==0.115.14",
    "uvicorn==0.34.3",
    "supabase==2.9.0",
    "openai==1.68.2",
    "anthropic==0.18.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.9",
    "numpy==1.26.4",
    "email-validator==2.1.2",
    "qdrant-client==1.5.4",
    "httpx==0.26.0",
    "stripe==7.14.0",
    "python-dotenv==1.1.1",
    "markitdown==0.1.2",
    "PyPDF2==3.0.1",
    "python-docx==1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "ruff==0.13.3",
    "pyright==1.1.406",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "app/**/*",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["app"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*"]
defineConstant = { DEBUG = true }
stubPath = "stubs"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "Linux"
executionEnvironments = [
  { root = "." }
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B", "F401", "F811"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "-ra"
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "webhook: Webhook-specific tests",
    "stripe: Stripe-specific tests",
    "slow: Slow running tests"
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
]
